# ficus

./: .clang-format  .gitignore  CMake-x86_64-elf-toolchain.cmake  CMake-x86_64-ficus-toolchain.cmake  CMake-x86_64-os3-toolchain.cmake  CMakeLists.txt  clionenv.sh  env.sh  run.sh
.github/workflows/: ficus.yml  unit.yml
ficus-toolchain/: .gitignore  build-all.sh  build-newlib.sh  build-s1.sh  build-s2.sh  build.sh  buildenv.sh  get-sources.sh
ficus-toolchain/binutils-x86_64-ficus/: 0001-binutils-diff.patch
ficus-toolchain/binutils-x86_64-ficus/binutils-2.41/: config.sub
ficus-toolchain/binutils-x86_64-ficus/binutils-2.41/bfd/: config.bfd
ficus-toolchain/binutils-x86_64-ficus/binutils-2.41/gas/: configure.tgt
ficus-toolchain/binutils-x86_64-ficus/binutils-2.41/ld/: Makefile.am  Makefile.in  configure.tgt
ficus-toolchain/binutils-x86_64-ficus/binutils-2.41/ld/autom4te.cache/: output.0  requests
ficus-toolchain/gcc-x86_64-ficus/: 0001-gcc-diff.patch
ficus-toolchain/gcc-x86_64-ficus/gcc-13.2.0/: config.sub
ficus-toolchain/gcc-x86_64-ficus/gcc-13.2.0/fixincludes/: mkfixinc.sh
ficus-toolchain/gcc-x86_64-ficus/gcc-13.2.0/gcc/: config.gcc
ficus-toolchain/gcc-x86_64-ficus/gcc-13.2.0/gcc/config/: ficus.h
ficus-toolchain/gcc-x86_64-ficus/gcc-13.2.0/libgcc/: config.host
ficus-toolchain/gcc-x86_64-ficus/gcc-13.2.0/libstdc++-v3/: configure  crossconfig.m4
ficus-toolchain/newlib/newlib-4.4.0.20231231/: config.sub  configure
ficus-toolchain/newlib/newlib-4.4.0.20231231/libgloss/: configure  configure.ac
ficus-toolchain/newlib/newlib-4.4.0.20231231/newlib/: configure  configure.host
ficus-toolchain/newlib/newlib-4.4.0.20231231/newlib/libc/sys/: Makefile.inc
ficus-toolchain/newlib/newlib-4.4.0.20231231/newlib/libc/sys/ficus/: crt0.c  syscalls.c
ficus-toolchain/newlib/source/: .gitignore  configure.ac
ficus-toolchain/newlib/source/newlib/: configure.host
ficus-toolchain/newlib/source/newlib/libc/: acinclude.m4
ficus-toolchain/newlib/source/newlib/libc/sys/ficus/: syscalls.c
os3-toolchain/: build-newlib.sh  build.sh
os3-toolchain/binutils-x86_64-os3/binutils-2.41/: config.sub
os3-toolchain/binutils-x86_64-os3/binutils-2.41/bfd/: config.bfd
os3-toolchain/binutils-x86_64-os3/binutils-2.41/gas/: configure.tgt
os3-toolchain/binutils-x86_64-os3/binutils-2.41/ld/: Makefile.am  Makefile.in  configure.tgt
os3-toolchain/binutils-x86_64-os3/binutils-2.41/ld/autom4te.cache/: traces.0
os3-toolchain/gcc-x86_64-os3/gcc-13.2.0/: config.sub
os3-toolchain/gcc-x86_64-os3/gcc-13.2.0/fixincludes/: mkfixinc.sh
os3-toolchain/gcc-x86_64-os3/gcc-13.2.0/gcc/: config.gcc
os3-toolchain/gcc-x86_64-os3/gcc-13.2.0/gcc/config/: os3.h
os3-toolchain/gcc-x86_64-os3/gcc-13.2.0/gcc/config/i386/: t-x86_64-os3
os3-toolchain/gcc-x86_64-os3/gcc-13.2.0/libgcc/: config.host
os3-toolchain/gcc-x86_64-os3/gcc-13.2.0/libstdc++-v3/: configure  crossconfig.m4
os3-toolchain/newlib/newlib-4.4.0.20231231/: config.sub  configure  configure.ac
os3-toolchain/newlib/newlib-4.4.0.20231231/libgloss/: configure  configure.ac
os3-toolchain/newlib/newlib-4.4.0.20231231/newlib/: configure  configure.host
os3-toolchain/newlib/newlib-4.4.0.20231231/newlib/libc/: acinclude.m4
os3-toolchain/newlib/newlib-4.4.0.20231231/newlib/libc/sys/: Makefile.inc
os3-toolchain/newlib/newlib-4.4.0.20231231/newlib/libc/sys/os3/: Makefile.inc  crt0.c  syscalls.c
src/: CMakeLists.txt
src/arch/: CMakeLists.txt
src/arch/x86/: CMakeLists.txt  LimineFramebuffer.cpp  LimineFramebuffer.hpp  PS2Keyboard.cpp  PS2Keyboard.hpp  SerialTty.cpp  SerialTty.hpp  boot.c  boot.cpp  cppsupport.cpp  cv.c  cv.h  gdt.asm  gdt.c  gdt.cpp  gdt.h  gdt.hpp  globals.c  globals.cpp  globals.hpp  handle_exception.cpp  idt.asm  idt.c  idt.cpp  idt.h  idt.hpp  io.c  io.cpp  io.h  io.hpp  kmain.c  kmain.cpp  kmem.c  kmem.cpp  kmem.hpp  limine.hpp  limine_fb.c  limine_fb.cpp  limine_fb.h  limine_fb.hpp  (+44 more)
src/iso/: CMakeLists.txt  limine.cfg
src/kernel/: BytesFormatter.cpp  BytesFormatter.hpp  CMakeLists.txt  FbTty.cpp  FbTty.hpp  Fonts.hpp  Framebuffer.cpp  Framebuffer.hpp  LockGuard.cpp  LockGuard.hpp  Serialize.hpp  Spinlock.cpp  Spinlock.hpp  TestTemplates.cpp  Tty.cpp  Tty.hpp  TtyManager.cpp  TtyManager.hpp  VMA.cpp  VMA.hpp  assert.h  asserts.cpp  asserts.hpp  cppsupport.cpp  cv.cpp  cv.hpp  mutex.cpp  mutex.h  mutex.hpp  rand.c  rand.cpp  rand.h  stdlib.h  string.c  string.h  string.hpp  syscalls_defs.h  syscalls_interface.c  syscalls_interface.h
src/kernel/elf/: CMakeLists.txt  ElfParser.cpp  ElfParser.hpp
src/kernel/templates/: CMakeLists.txt  CircularBuffer.hpp  List.hpp  ListQueue.hpp  PointersCollection.hpp  SkipList.hpp  SkipListSet.hpp  String.hpp  TestTemplates.cpp  TestTemplates.hpp  Vector.hpp
src/kernel/templates/stl/: CMakeLists.txt  bitset  char_traits.h  container_concepts.h  defalloc.h  iterator  iterator.h  numeric  pthread_alloc  ropeimpl.h  stdexcept  stl_algo.h  stl_algobase.h  stl_alloc.h  stl_bvector.h  stl_config.h  stl_construct.h  stl_exception.h  stl_iterator.h  stl_rope.h  stl_string_fwd.h  stl_threads.h  string  tempbuf.h  valarray
src/kernel/vfs/: CMakeLists.txt  FDT.cpp  FDT.hpp  File.cpp  File.hpp  Filesystem.cpp  Filesystem.hpp  MemFs.cpp  MemFs.hpp  MountTable.cpp  MountTable.hpp  Node.cpp  Node.hpp  Path.cpp  Path.hpp  PipeFs.cpp  PipeFs.hpp  TarFs.cpp  TarFs.hpp  TtyPipe.cpp  TtyPipe.hpp  VFSApi.cpp  VFSApi.hpp  VFSGlobals.cpp  VFSGlobals.hpp  VFSTester.cpp  VFSTester.hpp
src/limine/: CMakeLists.txt
src/test/: CMakeLists.txt  hello.c  hello.cpp  hello2.c  hello2.cpp  init.c  linker.ld
src/uapi/: CMakeLists.txt  FileOpts.h  dirent.h  syscalls_defs.h  syscalls_interface.c  syscalls_interface.h
src/unit-tests/: CMakeLists.txt
src/unit-tests/kapi/: CMakeLists.txt  kmem.cpp  kmem.hpp  stdlib.h
src/unit-tests/templates/: CMakeLists.txt  SkipListDetailedTest.cpp  SkipListTest.cpp
toolchain_scripts/: binutils-i686-elf.sh  binutils-x86_64-elf.sh  build-all.sh  gcc-i686-elf.sh  gcc-libstdcpp.patch  gcc-x86_64-elf.sh  grub.sh  libstdc++-x86_64-elf.sh  limine.sh  p2.patch
(+4 files in other folders)
